...
            "state": "translated",
            "value": "%1$d millilitr qo‘shish"
          }
        }
      }
    },
    "Add a serving": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add a serving"
...
            "state": "translated",
            "value": "Shisha"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "Kunlik maqsad"
          }
        }
      }
    },
    "Daily water goal": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Daily water goal"
...
            "state": "translated",
            "value": "O‘chirish"
          }
        }
      }
    },
    "Edit serving": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit serving"
...
            "state": "translated",
            "value": "Qurilmadagidek"
          }
        }
      }
    },
    "Get Started": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Get Started"
...
            "state": "translated",
            "value": "Stakan"
          }
        }
      }
    },
    "History": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "History"
...
            "state": "translated",
            "value": "Tarix"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
            "state": "translated",
            "value": "9:00 dan 21:00 gacha har ikki soatda suv ichishni eslatadi"
          }
        }
      }
    },
    "Save": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save"
...
            "state": "translated",
            "value": "Porsiya hajmi"
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "state": "translated",
            "value": "Suv ichish vaqti"
          }
        }
      }
    },
    "Today": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Today"
...
            "state": "translated",
            "value": "Bugun"
          }
        }
      }
    },
    "Today's hydration": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Today's hydration"
...
